Fix rotation transition bug on IOS

--- a/src/Chamilo/Core/Repository/ContentObject/Rubric/Resources/Source/src/scss/_table-app.scss
+++ b/src/Chamilo/Core/Repository/ContentObject/Rubric/Resources/Source/src/scss/_table-app.scss
@@ -109,8 +109,10 @@
     justify-content: center;
 
     .check {
+      transform: rotate(0deg);
       transition: transform 200ms;
     }
+
     .check:focus {
       outline: none;
     }
